fix: reorganize menu item

--- a/docs/how-to-guides/development/use-watch-command.mdx
+++ b/docs/how-to-guides/development/use-watch-command.mdx
@@ -36,7 +36,9 @@ The `webiny watch` command is the number one command you'll be using while devel
 
 The command can be instructed not only to watch one or more packages in your Webiny project, but also a complete project application, and even redeploy it to the cloud as you make changes to its application and cloud infrastructure code. Last but not least, the `webiny watch` command also lets you easily stream logs (`console.log` calls) from deployed application code directly to your terminal, making it a bit easier to perform debugging, if necessary.
 
-<CenteredImage alt="Watch Command Preview" src={preview} />
+The following screenshot shows the `webiny watch` command in action,  displaying different logs, grouped into three different panes - **Build**, **Deploy**, and **Logs**.
+
+<CenteredImage alt="Watch Command - Build, Deploy and Logs Panes" src={preview} />
 
 :::info
 Learn more about project applications and packages in the [Project Applications and Packages](/docs/key-topics/project-organization/project-applications-and-packages) key topic.
