--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -28,6 +28,14 @@ For a full list of commands, in your terminal of choice, make sure to run `yarn 
 
 ## Common Commands
 
+### `yarn webiny watch {folder} --env {env}`
+
+Watches specified project application for application and cloud infrastructure code changes, and performs rebuilds and redeploys, accordingly.
+
+:::info
+For more information, please visit the [Use Watch Command](/docs/how-to-guides/development/use-watch-command) guide.
+:::
+
 ### `yarn webiny deploy --env {dev}`
 
 Builds all of the [project applications](http://localhost:3000/docs/key-topics/project-organization/project-applications-and-packages) and deploys cloud infrastructure resources defined within them, into the specified environment.
