fix: add link to the watch command article

--- a/docs/how-to-guides/webiny-cli/working-with-workspaces.mdx
+++ b/docs/how-to-guides/webiny-cli/working-with-workspaces.mdx
@@ -11,6 +11,10 @@ description: Learn how to use the `workspaces run` command in order to execute a
 - how to use the `workspaces run` command in order to execute a single command on multiple packages in your Webiny project
 :::
 
+:::info
+If you'd just like to learn how to watch code for changes and quickly redeploy them to your cloud provider, please visit the [Use Watch Command](/docs/how-to-guides/development/use-watch-command) guide.
+:::
+
 ## Introduction
 
 Every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization) and as such, it consists of multiple packages, or in the context of monorepos, multiple workspaces.
