fix: update `.pulumi` state files section

--- a/docs/key-topics/deployment/iac-with-pulumi.mdx
+++ b/docs/key-topics/deployment/iac-with-pulumi.mdx
@@ -118,42 +118,35 @@ This is the entry point file in which you start to define your infrastructure (t
 
 Except for the files we mentioned in the previous section, there is also one other group of files the Pulumi solution produces. These are Pulumi project's state files.
 
-These files describe at what state your cloud infrastructure is currently at. For example, it contains a list of all deployed resources, various metadata, configuration, and so on. State files are stored per Pulumi program stack, and by default, they are stored in your project application folder, inside the `.pulumi` folder, like so:
+These files describe at what state your cloud infrastructure is currently at. For example, it contains a list of all deployed resources, various metadata, configuration, and so on. State files are stored per Pulumi program stack, and by default, they are stored in the `.pulumi` folder, located in your project root.
 
-```
+```bash title=".pulumi (folder located in your project root)"
 .
 ├── api
 │   ├── .pulumi
 │   │   ├── backups
 │   │   ├── history
 │   │   └── stacks
-│   ├── pulumi
-│   ├── Pulumi.yaml
-│   ├── Pulumi.dev.yaml
-│   └── index.ts
 ├── apps
 │   ├── admin
 │   │   ├── .pulumi
 │   │   │   ├── backups
 │   │   │   ├── history
 │   │   │   └── stacks
-│   │   ├── pulumi
-│   │   ├── Pulumi.yaml
-│   │   ├── Pulumi.dev.yaml
-│   │   └── index.ts
 │   └── website
 │       ├── .pulumi
 │       │   ├── backups
 │       │   ├── history
 │       │   └── stacks
-│       ├── pulumi
-│       ├── pulumi
-│       ├── Pulumi.dev.yaml
-│       ├── Pulumi.yaml
-│       └── index.ts
 │  
 └── (...)
 ```
+
+Notice how state files are organized per project application:
+
+- `api` - **API** project application's cloud infrastructure state files
+- `apps/admin` - **Admin Area** project application's cloud infrastructure state files
+- `apps/website` - **Website** project application's cloud infrastructure state files
 
 ## Different Backends
 
