feat: add headless cms section in v5.5.0 changelog

--- a/docs/changelog/5.5.0.mdx
+++ b/docs/changelog/5.5.0.mdx
@@ -10,6 +10,8 @@ import CenteredImage from "../mdxComponents/centeredImage";
 import watchCommand from "./5.5.0/watch-command-webiny.gif";
 import watchCommandLogs from "./5.5.0/watch-command-webiny-logs.png";
 import treeCommand from "./5.5.0/tree-command.png";
+import headlessCmsPermissionUI1 from "./5.5.0/headless-cms-permission-ui-1.png";
+import headlessCmsPermissionUI2 from "./5.5.0/headless-cms-permission-ui-2.png";
 
 # Changes
 
@@ -69,6 +71,28 @@ For additional information and usage examples, simply type the following command
 ```bash
 yarn webiny ws tree --help
 ```
+
+## Headless CMS
+
+### CMS Permissions - [(#1562)](https://github.com/webiny/webiny-js/pull/1562)
+
+This release introduces an upgrade in CMS permissions. It includes small changes in permission selector UI and permission structure.
+It aims to improve defining fine-grained permissions and making them easy to grasp.
+
+Now you can define access to specific content model groups and based on that the list of available content models gets updated.
+
+All the existing CMS permissions defined in security groups and API keys get migrated to the new structure via the update widget.
+
+<CenteredImage alt="Headless CMS - permission selector UI" src={headlessCmsPermissionUI1} />
+<CenteredImage
+  alt="Headless CMS - permission selector UI"
+  src={headlessCmsPermissionUI2}
+  style={{ marginTop: -25 }}
+/>
+
+:::caution
+We recommend verifying the CMS permission after the update just to double-check that they reflect exactly what is expected.
+:::
 
 ## Other
 
