--- a/docs/how-to-guides/upgrade-webiny/5.3.0-to-5.4.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.3.0-to-5.4.0.mdx
@@ -7,7 +7,6 @@ description: Learn how to upgrade Webiny from 5.3.0 to 5.4.0.
 ---
 
 :::tip What you’ll learn
-
 - how to upgrade Webiny from 5.3.0 to 5.4.0
 :::
 
@@ -16,7 +15,7 @@ Before continuing, make sure to take the necessary precautions, listed in the [O
 :::
 
 :::info
-Make sure to check out the [5.4.0 changelog](/docs/changelog/5.4.0) to get familiar with all of the changes that this release brought.
+Make sure to check out the [5.4.0 changelog](/docs/changelog/5.4.0) to get familiar with all of the changes introduced with this release.
 :::
 
 ## Upgrade Webiny Packages
