--- a/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0.mdx
@@ -15,7 +15,7 @@ Before continuing, make sure to take the necessary precautions, listed in the [O
 :::
 
 :::info
-Make sure to check out the [5.5.0 changelog](/docs/changelog/5.5.0) to get familiar with all of the changes that this release brought.
+Make sure to check out the [5.5.0 changelog](/docs/changelog/5.5.0) to get familiar with all the changes  introduced in this release.
 :::
 
 ## Upgrade Webiny Packages
@@ -29,7 +29,7 @@ yarn up "@webiny/*@5.5.0"
 
 ## Upgrade Webiny Project
 
-This release includes a couple of smaller changes on the project organization level. To make it easier, we provide a simple [Webiny CLI](/docs/key-topics/webiny-cli) command that will automatically make all of the necessary adjustments for you.
+This release includes a couple of smaller changes on the project organization level. To make it easier, we provide a simple [Webiny CLI](/docs/key-topics/webiny-cli) command that will automatically make all the necessary adjustments for you.
 
 Once you've run the above upgrade command, run the following:
 
