--- a/docs/changelog/5.5.0.mdx
+++ b/docs/changelog/5.5.0.mdx
@@ -96,6 +96,41 @@ We recommend verifying your CMS permissions after the upgrade, to make sure they
 
 Up until now, you had to manually render rich text content that comes from the Headless CMS. To make it a lot easier for you, we've finally introduced a dedicated component to do the heavy lifting. For details, see the [how-to guide on rendering the rich text content](/docs/how-to-guides/headless-cms/rendering-rich-text/).
 
+### Filtering by reference field id
+
+We added a filtering option, into our generated GraphQL Schema, to filter CMS entries by a reference field id.
+
+For example, you can find all the articles that are connected to an author, or a list of authors:
+
+```graphql
+{
+	listArticles(where: {
+		author: "author-id"
+		# OR for multiple authors
+		author_in: ["author-id", "another-author-id"]
+	}) {
+		data {
+			id
+		}
+	}
+}
+```
+
+You can also filter out all the articles that contain an author, or a list of authors:
+```graphql
+{
+	listArticles(where: {
+		author_not: "author-id"
+		# OR for multiple authors
+		author_not_in: ["author-id", "another-author-id"]
+	}) {
+		data {
+			id
+		}
+	}
+}
+```
+
 ## Other
 
 ### Project Organization Changes [(#1540)](https://github.com/webiny/webiny-js/pull/1540)
