fix(changelog): use title case

--- a/docs/changelog/5.5.0.mdx
+++ b/docs/changelog/5.5.0.mdx
@@ -96,7 +96,7 @@ We recommend verifying your CMS permissions after the upgrade, to make sure they
 
 Up until now, you had to manually render rich text content that comes from the Headless CMS. To make it a lot easier for you, we've finally introduced a dedicated component to do the heavy lifting. For details, see the [how-to guide on rendering the rich text content](/docs/how-to-guides/headless-cms/rendering-rich-text/).
 
-### Filtering by reference field id
+### Filtering by Reference Field Id
 
 We added a filtering option, into our generated GraphQL Schema, to filter CMS entries by a reference field id.
 
