--- a/docs/tutorials/create-an-application/admin-area-package.mdx
+++ b/docs/tutorials/create-an-application/admin-area-package.mdx
@@ -12,27 +12,27 @@ description: Quickly create and deploy Admin area package.
 
 
 ## Prerequisites
-Before you start this tutorial, make sure that you have Webiny installed and to read our [Introduction](/docs/tutorials/create-an-application/introduction) tutorial.
+Before you start this tutorial, make sure that you have Webiny installed and read our [Introduction](/docs/tutorials/create-an-application/introduction) tutorial.
 
 ## Overview
-The UI scaffold is our boilerplate React application that works out of the box without you needing to actually write any code.
+The UI scaffold is our boilerplate React application that works out of the box without you needing to write any code.
 It will enable you to create, update and delete the data via the form and to list and view it.
-In this article we will go through the process of generating the code.
+In this article, we will go through the process of generating the code.
 
 The command you will run is `yarn webiny scaffold`, and you run it from the project root.
 
 You will get a set of simple questions to answer and, in the end, a React application package will be generated.
 
-Also note that in this tutorial we will use `CarManufacturer` as our data model name.
+Also, note that in this tutorial we will use `CarManufacturer` as our data model name.
 
-### Running the Scaffold
+## Running the Scaffold
 Run the scaffold command and follow the questions. Select the `Admin Area package` option and let's go through all the questions in detail:
 
 ##### 1. Enter the name of the initial data model
 This is the name of your API data model, so type it in.
 As mentioned before, we will use `CarManufacturer` in this tutorial.
 
-The GraphQL queries, mutations, responses, and variable names in the code will use this value in singular and plural, kebab-case, camel-case or some other form.
+The GraphQL queries, mutations, responses, and variable names in the code will use this value in singular and plural, kebab-case, camel-case, or some other form.
 
 ```typescript
 export const LIST_CAR_MANUFACTURERS = gql`
@@ -116,9 +116,9 @@ The package name that you will reference to in the code.
 As in the location step, the value from the first question is used to create the default package name.
 :::
 
-The default value is `@car-manufacturers/admin-app` as we like scoping packages. You can set it to what ever you want, providing it is passing the validation.
+The default value is `@car-manufacturers/admin-app` as we like scoping packages. You can set it to whatever you want, providing it is passing the validation.
 
-### The Code
+## The Code
 Generated code contains:
 1. `src/views/graphql.ts` with GraphQL queries and mutations for the data model.
 2. `src/views/CarManufacturers.tsx` with a React component that renders both the list view and the form.
@@ -129,8 +129,8 @@ Generated code contains:
 7. `src/types.ts` with interfaces for entry items and data list props.
 8. `src/index.ts` with exports of the plugins to be used in the admin app.
 
-### Using the Generated Code in Your Project
-In the main admin app file you need to import your package and include it in the plugin registration array.
+## Using the Generated Code in Your Project
+In the main admin app file, you need to import your package and include it in the plugin registration array.
 ```typescript title="apps/admin/code/src/plugins/index.ts"
 // at the top of the file
 import carManufacturerPlugin from "@car-manufacturers/admin-app";
@@ -151,7 +151,7 @@ You would add a new Cell component with Bind and Input components to the existin
 </Cell>
 ```
 
-You need to change GraphQL as well, for example we will add it into mutation for creating the entry:
+You need to change GraphQL as well, for example, we will add it into mutation for creating the entry:
 
 ```typescript title="packages/car-manufacturers/admin-app/src/views/graphql.ts"
 export const CREATE_CAR_MANUFACTURER = gql`
@@ -231,13 +231,13 @@ If you want your created menu to load some route, check out the `packages/car-ma
 Also, you can copy that file and change what you require. Remember to import it into the `index.ts` file.
 
 ## Building the Code
-When you make changes to the code, make sure you run `yarn webiny ws run build --folder=packages/car-manufacturers/admin-app` to actually compile your code for the deployment.
+When you make changes to the code, make sure you run `yarn webiny ws run build --folder=packages/car-manufacturers/admin-app` to compile your code for the deployment.
 
 You can even have a watcher running for your code with `yarn webiny ws run watch --folder=packages/car-manufacturers/admin-app`.
 
 Of course, the `folder` value is your package location.
 
-### Run locally
+## Run locally
 Unlike the API, you can run the React application locally:
 1. `cd apps/admin/code`
 2. `yarn start --env=YOUR_ENVIRONMENT`
@@ -245,7 +245,7 @@ Unlike the API, you can run the React application locally:
 This will start the local build of the Admin app. Also, it will automatically rebuild and refresh when it detects changes in the code.
 
 
-### Deploy the Admin App
+## Deploy the Admin App
 To use the generated React application online, you must deploy it. To deploy, use the command:
 ```
 yarn webiny deploy apps/admin --env YOUR_ENVIRONMENT
