fix: replace --scope with --package

--- a/docs/how-to-guides/development/use-watch-command.mdx
+++ b/docs/how-to-guides/development/use-watch-command.mdx
@@ -1,7 +1,7 @@
 ---
 id: use-watch-command
-title: Use Watch Command
-sidebar_label: Use Watch Command
+title: Use the Watch Command
+sidebar_label: Use the Watch Command
 keywords: ["webiny", "watch", "command", "development"]
 description: Learn how to continuously rebuild and redeploy your code using the "webiny watch" command.
 ---
@@ -89,20 +89,20 @@ yarn webiny watch api/code/headlessCMS --env dev
 
 #### Picking Specific Packages
 
-If the above option is not enough, you can also pick the exact packages you want to watch, using the `--scope` argument. The following command will watch for code changes in the `api-graphql` and our custom `api-car-manufacturers` packages:
+If the above option is not enough, you can also pick the exact packages you want to watch, using the `--package` argument. The following command will watch for code changes in the `api-graphql` and our custom `api-car-manufacturers` packages:
 
 ```bash
 # Starts watching the "api-graphql" package ("api/code/graphql") and our
 # custom "api-car-manufacturers" package on which we're currently working on.
-yarn webiny watch --env dev --scope api-graphql --scope api-car-manufacturers
+yarn webiny watch --env dev --package api-graphql --package api-car-manufacturers
 ```
 
-The `--scope` argument can also take a [`minimatch`](https://www.npmjs.com/package/minimatch) pattern, allowing you to specify multiple packages to watch, with a single `--scope` argument. For example, the following command will watch all packages whose name starts with `api-`:
+The `--package` argument can also take a [`minimatch`](https://www.npmjs.com/package/minimatch) pattern, allowing you to specify multiple packages to watch, with a single `--package` argument. For example, the following command will watch all packages whose name starts with `api-`:
 
 ```bash
 # Starts watching all "api-*" packages. Note that it's recommended you wrap
 # your pattern with quotes, otherwise you might receive unexpected results.
-yarn webiny watch --env dev --scope "api-*"
+yarn webiny watch --env dev --package "api-*"
 ```
 
 Note that when picking packages this way, you should also include at least one package that represents the actual cloud (AWS Lambda) function. These packages are located within your project application folder, and, in the above command, that package was `api-graphql` (`api/code/graphql`).
@@ -112,7 +112,7 @@ Aa an additional example, if we were working on expanding the Headless CMS Graph
 ```bash
 # Starts watching the "api-headless-cms" package ("api/code/headlessCMS") and our
 # custom "api-cms-custom-field" package on which we're currently working on.
-yarn webiny watch --env dev --scope api-headless-cms --scope api-cms-custom-field
+yarn webiny watch --env dev --package api-headless-cms --package api-cms-custom-field
 ```
 
 This ensures that the cloud function code is rebuilt on every code change, and thus, that the actual cloud (AWS Lambda) function is redeployed accordingly.
@@ -153,11 +153,11 @@ Essentially, everything you log in your application code is forwarded to your te
 
 The `webiny watch` command also lets you simply watch one or more packages, with no automatic redeployments. This can be useful if you've just started with creation of one or more packages or you're writing tests. In other words, you're not ready yet to integrate the new packages with existing project applications.
 
-To start watching one or more packages, simply omit the project application related arguments, and provide package names, via the already seen `--scope` argument. For example:
+To start watching one or more packages, simply omit the project application related arguments, and provide package names, via the already seen `--package` argument. For example:
 
 ```bash
 # Starts watching three packages.
-yarn webiny watch --scope "api-car-manufacturers" --scope "api-headless-cms" --scope "api-cms-custom-field"
+yarn webiny watch --package "api-car-manufacturers" --package "api-headless-cms" --package "api-cms-custom-field"
 ```
 
 ## FAQ
