fix: add missing "bash"

--- a/docs/how-to-guides/development/use-watch-command.mdx
+++ b/docs/how-to-guides/development/use-watch-command.mdx
@@ -81,7 +81,7 @@ yarn webiny watch api/code/graphql --env dev
 
 In the same way, if we just wanted to work on the Headless CMS GraphQL API that's deployed within the default **API** project application and whose code is located in the `api/code/headlessCMS` folder, we could run the following command:
 
-```
+```bash
 # Starts watching the Headless CMS GraphQL API code, that's also deployed as part of the
 # API project application ("api/code/headlessCMS").
 yarn webiny watch api/code/headlessCMS --env dev
