fix: add troubleshooting section

--- a/docs/how-to-guides/development/use-watch-command.mdx
+++ b/docs/how-to-guides/development/use-watch-command.mdx
@@ -8,6 +8,7 @@ description: Learn how to continuously rebuild and redeploy your code using the 
 
 import CenteredImage from "../../mdxComponents/centeredImage";
 import preview from "./use-watch-command/watch-command-preview.png";
+import pseudoConsoles from "./use-watch-command/git-support-pseudo-consoles.png";
 
 :::info Can I Use This?
 The `webiny watch` command is available since Webiny **v5.5.0**.
@@ -167,3 +168,13 @@ yarn webiny watch --package "api-car-manufacturers" --package "api-headless-cms"
 The automatic redeployments feature is not that useful when doing frontend development, simply because you already have your application running locally, and there isn't really a need to continuously redeploy it to the cloud. That's why, when you start watching **Admin Area** (`apps/admin`) and **Website** (`apps/website`) project applications, you'll notice that the automatic redeployments are disabled. The only thing you'll be able to see are the code rebuild logs (the **Build** pane).
 
 This feature really shines when talking about backend (serverless) development, because all of the changes you make locally in your code are immediately reflected in a remote cloud environment.
+
+## Troubleshooting
+
+#### I'm on Windows, using GitBash, and my screen looks completely broken.
+
+If you're using [GitBash](https://www.atlassian.com/git/tutorials/git-bash), then you'll have to update it to at least to version `2.27.0`, as this version introduces the support for pseudo consoles.
+
+<CenteredImage alt="Enable Support For Pseudo Consoles" src={pseudoConsoles} />
+
+Please try enabling this option and try again.
