fix: correct watch command link

--- a/docs/changelog/5.5.0.mdx
+++ b/docs/changelog/5.5.0.mdx
@@ -56,9 +56,9 @@ And there's more! By simply appending the `--logs` argument to the `webiny watch
 
 This basically means **no more digging** through [Amazon CloudWatch](https://aws.amazon.com/cloudwatch/) logs while developing or debugging your backend application code.
 
-#### Learn More
-
-To learn more about the new `webiny watch` command, check out the newly added [Local Development](#) guide.
+:::info Learn More
+To learn more about the new `webiny watch` command, check out the newly added [Use the Watch Command](/docs/how-to-guides/development/use-watch-command) guide.
+:::
 
 ### Introduced New `webiny workspaces tree` Command [(#1540)](https://github.com/webiny/webiny-js/pull/1540)
 
