fix: use code formatting

--- a/docs/how-to-guides/development/use-watch-command.mdx
+++ b/docs/how-to-guides/development/use-watch-command.mdx
@@ -16,7 +16,7 @@ The `webiny watch` command is available since Webiny **v5.5.0**.
 
 :::tip What you'll learn
 
-- how to continuously rebuild and redeploy your code using the "webiny watch" command.
+- how to continuously rebuild and redeploy your code using the `webiny watch` command.
 :::
 
 ## Overview
