fix: add warning for windows/git-bash users

--- a/docs/changelog/5.5.0.mdx
+++ b/docs/changelog/5.5.0.mdx
@@ -12,6 +12,7 @@ import watchCommandLogs from "./5.5.0/watch-command-webiny-logs.png";
 import treeCommand from "./5.5.0/tree-command.png";
 import headlessCmsPermissionUI1 from "./5.5.0/headless-cms-permission-ui-1.png";
 import headlessCmsPermissionUI2 from "./5.5.0/headless-cms-permission-ui-2.png";
+import { isWindows } from "react-device-detect";
 
 # Changes
 
@@ -59,6 +60,14 @@ This basically means **no more digging** through [Amazon CloudWatch](https://aws
 :::info Learn More
 To learn more about the new `webiny watch` command, check out the newly added [Use the Watch Command](/docs/how-to-guides/development/use-watch-command) guide.
 :::
+
+<>
+{isWindows &&
+<div className="admonition admonition-caution alert alert--warning">
+    <h5>Using Windows and GitBash?</h5>
+    If on Windows and using <a href="https://www.atlassian.com/git/tutorials/git-bash">GitBash</a>, please note that you'll have to update it to at least to version <code>2.27.0</code>, as this version introduces the support for pseudo consoles (you will be asked whether you want this enabled in the installation process). Otherwise, upon starting the <code>webiny watch</code> command, you might be receiving broken output in your terminal.
+</div>}
+</>
 
 ### Introduced New `webiny workspaces tree` Command ([#1540](https://github.com/webiny/webiny-js/pull/1540))
 
