fix: add a note about the result of the yarn upgrade command

--- a/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0.mdx
@@ -27,6 +27,8 @@ The first step is to upgrade all `@webiny/*` packages, which can be done by runn
 yarn up "@webiny/*@5.5.0"
 ```
 
+Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.5.0`.
+
 ## Upgrade Webiny Project
 
 This release includes a couple of smaller changes on the project organization level. To make it easier, we provide a simple [Webiny CLI](/docs/key-topics/webiny-cli) command that will automatically make all the necessary adjustments for you.
