fix: add page builder / prerendering updates

--- a/docs/changelog/5.5.0.mdx
+++ b/docs/changelog/5.5.0.mdx
@@ -136,6 +136,17 @@ You can also filter out all the articles that contain an author, or a list of au
 }
 ```
 
+## Page Builder
+
+### New Pre-rendering Related Fixes ([#1569](https://github.com/webiny/webiny-js/pull/1569))
+
+Two pre-rendering related issues were fixed in this release:
+
+1. previewing and pre-rendering pages on non-default locales and tenants now works as expected
+2. rendering not-found page also now works as expected
+
+Note that, if upgrading to version `5.5.0`, there are a couple of [manual steps](/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0#additional-manual-upgrade-steps) that need to be done in order for these fixes to be fully applied.
+
 ## Other
 
 ### Project Organization Changes ([#1540](https://github.com/webiny/webiny-js/pull/1540))
