fix: update FAQ with new items

--- a/docs/how-to-guides/development/use-watch-command.mdx
+++ b/docs/how-to-guides/development/use-watch-command.mdx
@@ -163,6 +163,32 @@ yarn webiny watch --package "api-car-manufacturers" --package "api-headless-cms"
 
 ## FAQ
 
+#### Can I use the `webiny watch` command to start a watch process on frontend (React) apps?
+
+Yes, and with it, it's now a bit easier to start a new watch process for these.
+
+Where previously you had to navigate to your `apps/admin/code` package and run the `yarn start` command, now, it's simply a matter of running the following command:
+
+```bash
+yarn webiny watch --package admin --env dev
+```
+
+You can even start watching both `admin` and `website` applications at the same time, by running:
+
+```bash
+ yarn webiny watch --package admin --package website --env dev
+```
+
+#### Are there any requirements for a package to be "watchable" (using the `webiny watch` command)?
+
+The only thing that's needed is the `watch` script, in package's respective `package.json` file. But note that, all of the packages, including the ones that are scaffolded using the Webiny CLI's scaffolding utilities, will have this script automatically included, so essentially, there are no extra steps to be taken here.
+
+#### Can I append extra arguments when calling the `webiny watch` command?
+
+Yes, one of the examples where we use extra arguments is the environment, for example `--env dev`.
+
+Note that, all of the extra arguments, that you append upon calling the `webiny watch` command, will be passed to every `watch` script that's invoked in the process. From there, it's just a matter of whether the invoked `watch` script supports any of these extra arguments or not.
+
 #### Should automatic redeployments be used for frontend development?
 
 The automatic redeployments feature is not that useful when doing frontend development, simply because you already have your application running locally, and there isn't really a need to continuously redeploy it to the cloud. That's why, when you start watching **Admin Area** (`apps/admin`) and **Website** (`apps/website`) project applications, you'll notice that the automatic redeployments are disabled. The only thing you'll be able to see are the code rebuild logs (the **Build** pane).
